se realizan nuevas rutas en los enlaces ya que no funcionaban

--- a/index.html
+++ b/index.html
@@ -1,57 +1,57 @@
 </head>
 
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cita con la Birra</title>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+    <!-- Animaciones-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+</head>
+
+
+<!-- Barra de navegacion -->
+
 <body>
-    <!DOCTYPE html>
-    <html lang="en">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/index.html">Home</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/quienes-somos.html">Quienes Somos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href=".//pages/eventos.html">Eventos</a>
 
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Cita con la Birra</title>
-        <!-- Bootstrap -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-            integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-            crossorigin="anonymous" />
-        <!-- Animaciones-->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-        <link rel="stylesheet" href="./css/style.css" />
-    </head>
-
-
-    <!-- Barra de navegacion -->
-
-    <body>
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="/index.html">Home</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" href=".//pages/quienes-somos.html">Quienes Somos</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./pages/eventos">Eventos</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./reservas.html">Reservas</a>
-                            </li>
-                        </ul>
-                    </div>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./reservas.html">Reservas</a>
+                        </li>
+                    </ul>
                 </div>
-            </nav>
-        </header>
+            </div>
+        </nav>
+    </header>
 
-        <!-- -----------Texto de presentacion----------- -->
 
+    <!-- -----------Texto de presentacion----------- -->
+    <main>
         <div class="container my-3">
             <div class="row animate__animated animate__rubberBand">
                 <h1 class="display-3">Cita con la Birra</h1>
@@ -61,18 +61,20 @@
                     platos fuertes.
                     Disfruta de nuestra buena musica y shows wn vivo con los mejores artistas locales y no te podes
                     perder nuestras noches de stand up. ¡¡ Pura diversion !!.
-                    Veni a disfrutar en familia , tambien contamos con menús infantiles y sala de juegos para los mas 
+                    Veni a disfrutar en familia , tambien contamos con menús infantiles y sala de juegos para los mas
                     pequeños.
                 </p>
             </div>
-
+<!----------------- tarjetas de promociones-------- -->
+<section>
             <div class="row text-center animate__animated animate__bounceInLeft">
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-3">
                     <div class="card shadow">
                         <div class="card-body">
                             <h5 class="card-title">Hamburguesas nacionales</h5>
-                            <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex dolor vel
-                                reiciendis quas id mollitia adipisci ipsa non, necessitatibus totam?</p>
+                            <p class="card-text">Veni a probar nuestras hamburguesas, fabricadas con la mejor carne
+                                vacuna de nuestra region, no te quedes sin probarlas.
+                            </p>
                             <a href="" class="btn btn-info">Ver promocion</a>
                         </div>
                     </div>
@@ -94,13 +96,15 @@
                         <div class="card-body">
                             <h5 class="card-title">Nuestras cervezas</h5>
                             <p class="card-text">Contamos con la mas exquisita variedad de cervezas artesanales,
-                                aprovecha la promo en happy hours.Todas al 2x1</p>
+                                aprovecha la promo en happy hours.Todas al 2x1.</p>
                             <a href="" class="btn btn-info">Ver promocion</a>
                         </div>
                     </div>
                 </div>
             </div>
-
+        </section>
+<!------------ presentacion de la terraza----------- -->
+<section>
             <div class="row align-items-center animate__animated animate__bounceInRight">
                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <img src="./images/citaconlabirra3-proyect.jpeg" class=" foto_1 img-fluid" alt="Image" />
@@ -116,7 +120,7 @@
                     </p>
                 </div>
             </div>
-
+<!------- formulario de consulta--------------------- -->
             <div class="row align-items-center animate__animated animate__backInUp">
                 <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3 mt-3">
                     <form>
@@ -137,36 +141,35 @@
                     <img src="./images/citaconlabirra1-proyect.jpg" class=" foto_2 img-fluid" alt="Image" />
                 </div>
             </div>
+        </section>
+    </main>
+
+<!-- ------------------------footer------------- -->
+    <div class="row">
+        <footer class="py-3 my-4">
+            <h4>Seguinos en nuestras redes sociales</h4>
+            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                <li class="nav-item"><a href="https://es-la.facebook.com/" class="nav-link px-2 text-muted">Facebook:
+                        Cita Con La
+                        Birra</a></li>
+                <li class="nav-item"><a href="https://www.instagram.com/" class="nav-link px-2 text-muted">Instagram:
+                        @citaconlabirra_ok</a></li>
+            </ul>
+        </footer>
+    </div>
+    </div>
+
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 
 
-            <div class="row">
-                <footer class="py-3 my-4">
-                    <h4>Seguinos en nuestras redes sociales</h4>
-                    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                        <li class="nav-item"><a href="https://es-la.facebook.com/"
-                                class="nav-link px-2 text-muted">Facebook: Cita Con La
-                                Birra</a></li>
-                        <li class="nav-item"><a href="https://www.instagram.com/"
-                                class="nav-link px-2 text-muted">Instagram:
-                                @citaconlabirra_ok</a></li>
-                    </ul>
-
-                </footer>
-            </div>
-        </div>
-
-        <!-- Bootstrap -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-            crossorigin="anonymous"></script>
-
-
-        </main>
-    </body>
-
-    </html>
-
+    
 </body>
+
+</html>
+
 
 
 
