--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
-
+    <!-- animaciones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="../css/style.css">
@@ -16,11 +17,12 @@
 </head>
 
 <body>
+    <!-- barra de navegacion -->
 
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/eventos.html">Eventos</a>
+                <a class="navbar-brand" href="./eventos.html">Eventos</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -31,13 +33,13 @@
                             <a class="nav-link" href="/index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/quienes-somos.html">Quienes Somos</a>
+                            <a class="nav-link" href=".//quienes-somos.html">Quienes Somos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href=".//contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/reservas.html">Reservas</a>
+                            <a class="nav-link" href=".//reservas.html">Reservas</a>
                         </li>
                     </ul>
                 </div>
@@ -45,81 +47,86 @@
         </nav>
     </header>
 
-    <div class="container my-3">
-        <div class="row animate__animated animate__rubberBand">
-            <h1 class="display-3">Nuestros Eventos</h1>
-            <p class="text-justify">
-                Artistas locales nos brindan sus mejores shows para el deleite de sus espectadores, acompañados de
-                una puesta en escena y sonido exepcional.
-            </p>
-            <div>
-                <iframe class=" ratio ratio-16x9 iframe__vid1" width="560" height="315" src="https://www.youtube.com/embed/I5EC0Hryn80"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-                <figcaption class="figcaption__event">Algo de lo que fue una de nuestras presentaciones en nuestro bar
-                </figcaption>
-            </figure>
-        </div>
+    <section>
+        <div class="container my-3">
+            <div class="row animate__animated animate__rubberBand">
+                <h1 class="display-3">Nuestros Eventos</h1>
+                <p class="text-justify">
+                    Artistas locales nos brindan sus mejores shows para el deleite de sus espectadores, acompañados de
+                    una puesta en escena y sonido exepcional.
 
-            <section class="section__boots">
-                <div class="row align-items-center animate__animated animate__bounceInRight">
-                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-
-                        <div class="ratio ratio-16x9">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/pVzPiUhgfco"
-                                title="YouTube video player" frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                allowfullscreen></iframe>
-                        </div>
-
-                    </div>
-                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                        <h1 class="display-3 text-center">Noches de Stand Up</h1>
-                        <p class="text-justify">
-                            ¿Tenes buen humor?, ¿haces reir a tus amigos?, ¿sos el alma de la fiesta?, veni a compartir
-                            ese
-                            talento con nosotros.
-                            En nuestras noches de Stand Up nadie se queda afuera.Contamos con un escenario totalmente
-                            abierto al
-                            publico.
-                            Humoristas conocidos y amateur nos comparten sus mejores monologos para no parar de reir,
-                            veni a
-                            compartir tus risas con nosotros.
-                        </p>
-                        </p>
-                    </div>
-                </div>
-            </section>
-            <section>
-                <h3> Sorteos y Promociones</h3>
-                <p>
-                    Participa de nuestros increibles sorteos. Con tu compra te llevas un numero el cual participa de
-                    diversos premios que sorteamos en el transcurso de la noche .
-                    Podes llevarte cenas para vos y 3 amigos ¡todo incluido!, tambien pintas, tragos , y hasta una
-                    canilla libre de nuestras mejores cervezas para que festejes lo que quieras con nosotros. ¿Te lo vas
-                    a perder?..
                 </p>
-            </section>
+                <div>
+                    <iframe class=" ratio ratio-16x9 iframe__vid1" width="560" height="315"
+                        src="https://www.youtube.com/embed/I5EC0Hryn80" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                    <figcaption class="figcaption__event">Algo de lo que fue una de nuestras presentaciones en nuestro
+                        bar
+                    </figcaption>
+                    </figure>
+                </div>
 
+                <section class="section__boots">
+                    <div class="row align-items-center animate__animated animate__bounceInRight">
+                        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
 
-            <div class="row">
-                <footer class="py-3 my-4">
-                    <h4>Seguinos en nuestras redes sociales</h4>
-                    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                        <li class="nav-item"><a href="https://es-la.facebook.com/"
-                                class="nav-link px-2 text-muted">Facebook: Cita Con La
-                                Birra</a></li>
-                        <li class="nav-item"><a href="https://www.instagram.com/"
-                                class="nav-link px-2 text-muted">Instagram:
-                                @citaconlabirra_ok</a></li>
-                    </ul>
-                </footer>
+                            <div class="ratio ratio-16x9">
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/pVzPiUhgfco"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    allowfullscreen></iframe>
+                            </div>
+                </section>
+
+                
             </div>
+            <!-- noches de stand up -->
+            <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                <h2 class="display-3">Noches de Stand Up</h2>
+                <p class="text-justify text-center">
+                    ¿Tenes buen humor?, ¿haces reir a tus amigos?, ¿sos el alma de la fiesta?, veni a compartir
+                    ese
+                    talento con nosotros.
+                    En nuestras noches de Stand Up nadie se queda afuera.Contamos con un escenario totalmente
+                    abierto al
+                    publico.
+                    Humoristas conocidos y amateur nos comparten sus mejores monologos para no parar de reir,
+                    veni a
+                    compartir tus risas con nosotros.
+                </p>
+
+            </div>
+        </div>
+    
+    <section>
+        <h3> Sorteos y Promociones</h3>
+        <p>
+            Participa de nuestros increibles sorteos. Con tu compra te llevas un numero el cual participa de
+            diversos premios que sorteamos en el transcurso de la noche .
+            Podes llevarte cenas para vos y 3 amigos ¡todo incluido!, tambien pintas, tragos , y hasta una
+            canilla libre de nuestras mejores cervezas para que festejes lo que quieras con nosotros. ¿Te lo vas
+            a perder?..
+        </p>
+    </section>
+
+    <!-- footer -->
+    <div class="row">
+        <footer class="py-3 my-4">
+            <h4>Seguinos en nuestras redes sociales</h4>
+            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                <li class="nav-item"><a href="https://es-la.facebook.com/" class="nav-link px-2 text-muted">Facebook:
+                        Cita Con La
+                        Birra</a></li>
+                <li class="nav-item"><a href="https://www.instagram.com/" class="nav-link px-2 text-muted">Instagram:
+                        @citaconlabirra_ok</a></li>
+            </ul>
+        </footer>
+    </div>
 
 
-
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-                crossorigin="anonymous"></script>
+    <!-- bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 </body>
