--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -8,12 +8,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+    <!-- animaciones -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../css/style.css">
     <title>Quienes somos</title>
 </head>
 
 <body>
     <header>
+        <!-- Barra de navegacion -->
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
@@ -25,16 +31,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="./index.html">Home</a>
+                            <a class="nav-link" href="/index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/eventos.html">Eventos</a>
+                            <a class="nav-link" href=".//eventos.html">Eventos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href=".//contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/reservas.html">Reservas</a>
+                            <a class="nav-link" href=".//reservas.html">Reservas</a>
                         </li>
                     </ul>
                 </div>
@@ -53,17 +59,17 @@
                     <p class="text-justify">
                         Nuestros inicios se remontan al año 1993, cuando 3 hermanos decidieron fundar un restaurante
                         distinto a
-                        los demas , y valla que lo lograron. <br>
+                        los demas , y valla que lo lograron.
                         Cita con la birra , es un bar que lo tiene todo , tanto para jovenes en busca de diversion y
                         tambien
                         su
-                        formato restaurante para toda la familia. <br>
+                        formato restaurante para toda la familia.
                         Desde las mas deliciosas comidas rapidas hasta las mas exquisitas comidas caseras forman parte
                         de
-                        nuestros menus diarios. <br>
+                        nuestros menus diarios.
                         Contamos con espacios para festejos o reuniones particulares. Desde una reunion laboral o tu
                         cumpleaños
-                        lo podes realizar con nosotros. <br>
+                        lo podes realizar con nosotros.
                     </p>
                 </div>
 
@@ -71,8 +77,8 @@
                     <div class="container">
                         <div class="row">
                             <div class="col">
-                                <img class="  foto_3 img-fluid rounded mx-auto d-block" src="./images/bar-bootstrap.jpg"
-                                    alt="">
+                                <img class="  foto_3 img-fluid rounded mx-auto d-block "
+                                    src="../images/bar-ficticio.jpg" alt=" foto exterior del bar">
                             </div>
                         </div>
                     </div>
@@ -81,16 +87,17 @@
                 <section class="section__boots">
                     <div class="row align-items-center animate__animated animate__bounceInRight">
                         <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                            <img src="../images/birras-hamburguesas-boot.jpg" class=" foto-3 img-fluid" alt="Image" />
+                            <img src="../images/birras-hamburguesas-boot.jpg" class=" foto-3 img-fluid"
+                                alt="hamburguesas,papas" />
                         </div>
                         <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                            <h1 class="display-3 text-center">Nuestros Productos</h1>
+                            <h2 class="display-3 text-center">Nuestros Productos</h2>
                             <p class="justify-center">
                                 Nos caracterizamos por ser los unicos en la zona que ofrece una variedad de productos
                                 totalmente
                                 artesanales , desde nuestros platos hasta nuestra extensa variedad de cervezas, todo es
                                 creado por
-                                sus dueños y colaboradores <br>
+                                sus dueños y colaboradores2
                                 Lo que nos hace unicos y pioneros en emprendimientos gastronomicos.
 
                             </p>
@@ -98,12 +105,13 @@
                     </div>
                 </section>
 
+                <!-- tarjetas secundarias-------- -->
 
-                <div class=" borde row text-center animate__animated animate__bounceInLeft">
+                <div class="cards-secundarias borde row text-center animate__animated animate__bounceInLeft">
                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-3">
                         <div class="card shadow">
                             <div class="card-body">
-                                <h5 class="card-title">Comidas para Celiacos</h5>
+                                <h4 class="card-title">Comidas para Celiacos</h4>
                                 <p class="card-text"> En nuestro bar encontraras las mejores recetas para celiacos,
                                     podes mirar tus menus especialiazados aqui.. ¡¡ nadie queda afuera.. ¡¡ </p>
                                 <a href="" class="btn btn-info">Ver promocion</a>
@@ -113,7 +121,7 @@
                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-3">
                         <div class="card shadow">
                             <div class="card-body">
-                                <h5 class="card-title">Combos infantiles </h5>
+                                <h4 class="card-title">Combos infantiles </h4>
                                 <p class="card-text"> Mejores que Mac.. la mejor carne vacuna y fresca para que los
                                     peques disfruten, mira aqui las promos.. Aprovecha nuestros descuentos..
                                 </p>
@@ -124,7 +132,7 @@
                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-3">
                         <div class="card shadow">
                             <div class="card-body">
-                                <h5 class="card-title">Franquicias</h5>
+                                <h4 class="card-title">Franquicias</h4>
                                 <p class="card-text">Podes adquirir nuestras franquicias con los mejores productos que
                                     tenemos en stock, exito garantizado
                                     .. no esperes mas y consulta..¡¡
@@ -135,12 +143,14 @@
                     </div>
                 </div>
         </section>
+        <!-- colaboradores del bar -->
 
         <div class="container my-3">
             <div class="row animate__animated animate__rubberBand">
-                <h1 class="display-3">Nuestros Colaboradores</h1>
+                <h3 class="display-3">Nuestros Colaboradores</h3>
                 <p class="text-justify">
-                    VEn nuestra unica sucursal , contamos con mas de 20 empleados , entre ellos los mejores cocineros y
+                    Veni a nuestra unica sucursal , contamos con mas de 20 empleados , entre ellos los mejores cocineros
+                    y
                     bartenders del rubro gatronomico local.
                     Tambien contamos con equipo de sonidistas de la mano de AIE PRODUCCIONES para brindar el mejor
                     sonido a los artistas locales que se presentan en nuestro espacio.
@@ -148,22 +158,27 @@
                     a demostrar sus dotes musicales o humoristicos.
                 </p>
             </div>
+    </main>
 
+    <!-- footer -->
 
+    <div class="row">
+        <footer class="py-3 my-4">
+            <h4>Seguinos en nuestras redes sociales</h4>
+            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                <li class="nav-item"><a href="https://es-la.facebook.com/" class="nav-link px-2 text-muted">Facebook:
+                        Cita Con La
+                        Birra</a></li>
+                <li class="nav-item"><a href="https://www.instagram.com/" class="nav-link px-2 text-muted">Instagram:
+                        @citaconlabirra_ok</a></li>
+            </ul>
 
-            <div class="row">
-                <footer class="py-3 my-4">
-                    <h4>Seguinos en nuestras redes sociales</h4>
-                    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                        <li class="nav-item"><a href="https://es-la.facebook.com/"
-                                class="nav-link px-2 text-muted">Facebook: Cita Con La
-                                Birra</a></li>
-                        <li class="nav-item"><a href="https://www.instagram.com/"
-                                class="nav-link px-2 text-muted">Instagram:
-                                @citaconlabirra_ok</a></li>
-                    </ul>
+        </footer>
 
-                </footer>
+        <!-- Bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+            crossorigin="anonymous"></script>
 
 
 </body>
