--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <title>Reservas</title>
+    <!------------------- Bootstrap---------------- -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
 </head>
 
 <body>
@@ -45,7 +48,7 @@
                     Hace tu reserva con tiempo y veni a disfrutar con nosotros.
                 </p>
                 <figure>
-                    <img src="/images/reservas-proyect.jpg" alt="">
+                    <img src="/images/reservas-proyect.jpg" alt=" Fiesta realizada en nuestras instalaciones">
                 </figure>
             </article>
         </section>
@@ -115,6 +118,12 @@
             <li>Twitter: @citaconlabirra_bar</li>
         </ul>
     </footer>
+
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+
 
 
 </body>
